--- a/app/src/main/res/layout/widget.xml
+++ b/app/src/main/res/layout/widget.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2014 wak
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -14,45 +13,64 @@
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="fill_parent"
-             android:layout_height="fill_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/root"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="match_parent"
+    <RelativeLayout
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:contentDescription="@null"/>
-
-    <LinearLayout
-        android:id="@+id/root"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
         android:orientation="vertical">
 
         <TextClock
             android:id="@+id/dateText"
-            android:layout_width="match_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
             android:format12Hour="@string/date_text_format_12h"
             android:format24Hour="@string/date_text_format_24h"
-            android:gravity="bottom|center_horizontal"
-            android:textColor="@android:color/black"
-            android:textSize="@dimen/date_text_size_default"/>
+            android:gravity="center"
+            android:shadowColor="#000000"
+            android:shadowDx="0"
+            android:shadowDy="0"
+            android:shadowRadius="5.6"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/time_text_size_default"
+            android:textStyle="bold" />
 
         <TextClock
-            android:id="@+id/timeText"
-            android:layout_width="match_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:format12Hour="@string/time_text_format_12h"
-            android:format24Hour="@string/time_text_format_24h"
-            android:gravity="top|center_horizontal"
-            android:textColor="@android:color/black"
-            android:textSize="@dimen/time_text_size_default"
-            android:textStyle="bold"/>
+            android:id="@+id/dayText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:format12Hour="@string/day_text_format"
+            android:format24Hour="@string/day_text_format"
+            android:shadowColor="#000000"
+            android:shadowDx="0"
+            android:shadowDy="0"
+            android:shadowRadius="5.6"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/date_text_size_default"
+            android:textStyle="bold" />
+    </RelativeLayout>
 
-    </LinearLayout>
+    <TextClock
+        android:id="@+id/timeText"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_weight="1"
+        android:format12Hour="@string/time_text_format_12h"
+        android:format24Hour="@string/time_text_format_24h"
+        android:gravity="end"
+        android:shadowColor="#000000"
+        android:shadowDx="0"
+        android:shadowDy="0"
+        android:shadowRadius="5.6"
+        android:textColor="@android:color/white"
+        android:textSize="@dimen/time_text_size_default"
+        android:textStyle="bold" />
 
-</FrameLayout>
+</LinearLayout>
