--- a/app/src/main/res/xml/appwidget_info.xml
+++ b/app/src/main/res/xml/appwidget_info.xml
@@ -18,8 +18,9 @@
     android:initialKeyguardLayout="@layout/widget"
     android:initialLayout="@layout/widget"
     android:minHeight="@dimen/widget_size_min"
-    android:minWidth="@dimen/widget_size_min"
-    android:previewImage="@drawable/preview"
-    android:resizeMode="horizontal|vertical"
+    android:minWidth="@dimen/widget_width_min"
+    android:targetCellWidth="5"
+    android:targetCellHeight="1"
+    android:resizeMode="none"
     android:updatePeriodMillis="0"
     android:widgetCategory="home_screen"/>
