--- a/app/src/main/res/xml/appwidget_info.xml
+++ b/app/src/main/res/xml/appwidget_info.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2014 wak
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -17,10 +16,10 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:initialKeyguardLayout="@layout/widget"
     android:initialLayout="@layout/widget"
-    android:minHeight="@dimen/widget_size_min"
-    android:minWidth="@dimen/widget_width_min"
+    android:minWidth="150dp"
+    android:minHeight="50dp"
+    android:resizeMode="none"
     android:targetCellWidth="5"
     android:targetCellHeight="1"
-    android:resizeMode="none"
     android:updatePeriodMillis="0"
-    android:widgetCategory="home_screen"/>
+    android:widgetCategory="home_screen" />
